<resources>
    <string name="app_name">a\'Vita</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="inter_id">ca-app-pub-3940256099942544/1033173712</string>
    <!-- Menu Drawer Strings -->
    <string name="ad_cat1">Категории</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_favourites">Избранное</string>
    <string name="def">Разное</string>
    <string name="ad_car">Автомобили</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_phones">Телефоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="ad_consoles">Игровые консоли, игры</string>
    <string name="ad_witcher">Ведьмачье снаряжение</string>


    <string name="ad_cat2">Аккаунт</string>
    <string name="ad_sign_up">Регистрация</string>
    <string name="ad_sign_in">Вход</string>
    <string name="ad_sign_out">Выход</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь!</string>

    <!-- Sign Dialog -->
    <string name="email_hint">Email</string>
    <string name="email_reset_password_was_sent">Reset email was sent!</string>
    <string name="dialog_reset_email_message">Для восстановления пароля укажите ваш email адрес!</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистироваться!</string>
    <string name="sign_in_error">Не удалось войти!</string>
    <string name="send_verification_email_error">Не удалось email для подтверждения!</string>
    <string name="send_verification_done">На вашу почту была отправлена ссылка для подтверждения. Пожалуйста, подтвердите почту.</string>

    <!-- Email link -->
    <string name="link_done">Email успешно подключен к Google Account!</string>
    <string name="enter_to_gmail">У вас уже есть аккаунт с такой почтой, войдите в этот аккаунт, чтобы подсоединить эту почту!</string>

    <!-- Filter to countries -->
    <string name="list_country">No result</string>
    <string name="title">Заголовок</string>
    <string name="title_write">*Заголовок</string>
    <string name="choose_country">*Выберите страну</string>
    <string name="choose_city">*Выберите город</string>
    <string name="no_country_selected">Страна не выбрана</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="index">Индекс</string>
    <string name="index_write">Укажите индекс</string>
    <string name="tel">Телефон</string>
    <string name="tel_number">*Номер телефона</string>
    <string name="category">Категория</string>
    <string name="select_category">*Выберите категорию</string>
    <string name="price">Цена</string>
    <string name="price_hint">*Укажите цену</string>
    <string name="description">Описание</string>
    <string name="description_hint">Добавьте описание</string>
    <string name="delivery">Отправить доставкой</string>
    <string name="delivery_send">Доставка</string>
    <string name="publish">Разместить объявление</string>
    <string name="filter">Применить фильтр</string>
    <string name="filter_clear">Очистить фильтр</string>

    <string name="empty_fav">Пусто</string>
    <string name="guest_acc">Гость</string>

    <!-- Description Ad Text -->
    <string name="price_description">Цена:</string>
    <string name="tel_description">Телефон:</string>
    <string name="email_description">Почта:</string>
    <string name="country_description">Страна:</string>
    <string name="city_description">Город:</string>
    <string name="index_description">Индекс:</string>
    <string name="delivery_description">Доставка:</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="extra_subject">Объявление</string>
    <string name="extra_text">Здравствуйте, меня интересует ваше объявление!</string>
    <string name="open_email">Открыть с помощью</string>


    <string name="publish_time">Время публикации:</string>

    <string name="fields">Внимание! Все поля со звездочкой должны быть заполнены и добавлено минимум одно фото!</string>
    <string name="reg_error">Ошибка регистрации!</string>
    <string name="guest_err">Войдите или зарегистрируйтесь, чтобы опубликовать объявление!</string>
    <string name="filter_ad">Фильтр</string>


</resources>